// Copyright 2023 The Tekton Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "google/protobuf/timestamp.proto";

package tekton.results.lister;

option go_package = "github.com/tektoncd/results/pkg/api/server/v1alpha2/lister/pagetoken_go_proto";

message PageToken{
  string parent = 1;
  string filter = 2;
  Item last_item = 3;
}

message Item{
  string uid = 1;
  Order order_by = 2;
}

message Order{
  string field_name = 1;
  google.protobuf.Timestamp value = 2;
  enum Direction{
    ASC = 0;
    DESC = 1;
  }
  Direction direction = 3;
}